--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>Web Lab 3</title>
 </head>
 <body>
-<script src="js/main.js"></script>
+<script src="js/QuoteQuery.js"></script>
 </body>
 </html>
