--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Web Labs</title>
 </head>
 <body>
-<a href="./lab2/index.html"></a>
-<a href="./lab3/index.html"></a>
+<a href="./lab2/index.html">Lab 2</a>
+<a href="./lab3/index.html">Lab 3</a>
 </body>
 </html>
