Create styles for main page

--- a/index.html
+++ b/index.html
@@ -2,10 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/style.css">
   <title>Web Labs</title>
 </head>
 <body>
-<a href="./lab2/index.html">Lab 2</a>
-<a href="./lab3/index.html">Lab 3</a>
+<div class="navbar sticky-top">
+  <div class="container">
+    <button class="btn-lg btn-outline-primary" onclick="window.open('./lab1/index.html')" type="button"> Lab1</button>
+    <button class="btn-lg btn-outline-primary" onclick="window.open('./lab2/index.html')" type="button"> Lab2</button>
+    <button class="btn-lg btn-outline-primary" onclick="window.open('./lab3/index.html')" type="button"> Lab3</button>
+  </div>
 </body>
 </html>
