--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <button class="btn-lg btn-outline-primary" onclick="window.open('./lab2/index.html')" type="button"> Lab2</button>
     <button class="btn-lg btn-outline-primary" onclick="window.open('./lab3/index.html')" type="button"> Lab3</button>
   </div>
+</div>
 </body>
 </html>
