Create js scripts with GET and DELETE requests and admin_page
Signed-off-by: Daniil Nizovkin <dan_nizovkin_kungur@mail.ru>

--- a/lab4/index.html
+++ b/lab4/index.html
@@ -7,12 +7,16 @@
   <link href="//netdna.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.css" rel="stylesheet" id="bootstrap-css">
 </head>
 <body>
-<div class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top">
+<div class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top justify-content-between">
   <div class="container">
-    <a class="navbar-brand" href="#">News</a>
-    <a class="btn btn-primary" href="news_form.html">Add news</a>
+    <a class="navbar-brand" href="#">News Portal</a>
+    <div>
+      <a class="btn btn-primary" href="news_form.html">Add post</a>
+      <a class="btn btn-primary" href="admin_page.html">Admin Page</a>
+    </div>
   </div>
 </div>
-<script src="js/apiTest.js"></script>
+<script src="js/frameBuilder.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
