--- a/lab4/news_form.html
+++ b/lab4/news_form.html
@@ -2,9 +2,37 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Create news</title>
+  <link href="//netdna.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.css" rel="stylesheet" id="bootstrap-css">
+  <title>Create post</title>
 </head>
 <body>
-ПОШЁЛ ТЫ НА ХЕР, КОЗЗЁЛ
+
+<div class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top">
+  <div class="container">
+    <a class="navbar-brand" href="index.html">News Portal</a>
+    <a class="btn btn-primary" href="admin_page.html">Admin page</a>
+  </div>
+</div>
+
+<div class="container h-100 mt-5">
+  <div class="row h-100 justify-content-center align-items-center">
+    <form class="col-12">
+      <div class="form-group">
+        <label for="title">Title</label>
+        <input type="text" class="form-control" id="title" placeholder="Title">
+      </div>
+      <div class="form-group">
+        <label for="body">Text</label>
+        <textarea class="form-control" id="body" placeholder="Text" rows="5"></textarea>
+      </div>
+      <div class="form-group">
+        <label for="username">Your Name</label>
+        <input type="text" class="form-control" id="username" placeholder="Name">
+      </div>
+      <button type="submit" class="btn btn-primary">Add post</button>
+    </form>
+  </div>
+</div>
+
 </body>
 </html>
