--- a/lab4/news_form.html
+++ b/lab4/news_form.html
@@ -16,23 +16,23 @@
 
 <div class="container h-100 mt-5">
   <div class="row h-100 justify-content-center align-items-center">
-    <form class="col-12">
+    <form id="addPost" class="col-12">
       <div class="form-group">
         <label for="title">Title</label>
-        <input type="text" class="form-control" id="title" placeholder="Title">
+        <input type="text" class="form-control" id="title" placeholder="Title" required minlength="2">
       </div>
       <div class="form-group">
         <label for="body">Text</label>
-        <textarea class="form-control" id="body" placeholder="Text" rows="5"></textarea>
+        <textarea class="form-control" id="body" placeholder="Text" rows="5" required></textarea>
       </div>
       <div class="form-group">
         <label for="username">Your Name</label>
-        <input type="text" class="form-control" id="username" placeholder="Name">
+        <input type="text" class="form-control" id="username" placeholder="Name" required minlength="2">
       </div>
       <button type="submit" class="btn btn-primary">Add post</button>
     </form>
   </div>
 </div>
-
+<script src="js/sendForm.js"></script>
 </body>
 </html>
