--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <button class="btn-lg btn-outline-primary" onclick="window.open('./lab1/index.html')" type="button"> Lab1</button>
     <button class="btn-lg btn-outline-primary" onclick="window.open('./lab2/index.html')" type="button"> Lab2</button>
     <button class="btn-lg btn-outline-primary" onclick="window.open('./lab3/index.html')" type="button"> Lab3</button>
-    <button class="btn-lg btn-outline-primary" onclick="window.open('./lab4/index.html')" type="button"> Lab4</button>
+    <button class="btn-lg btn-outline-primary" onclick="window.open('http://o99678ib.beget.tech/')" type="button"> Lab4</button>
   </div>
 </div>
 </body>
